Added DB configs

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,12 +1,33 @@
 spring:
   application:
     name: auth-app
+  datasource:
+    url: jdbc:mysql://localhost:3306/auth-app
+    username: root
+    password: root
+
+    hikari:
+      pool-name: auth-app-pool
+      maximum-pool-size: 20
+      minimum-idle: 5
+      connection-timeout: 3000
+      idle-timeout: 600000
+      max-lifetime: 1740000
+      validation-timeout: 1000
+      leak-detection-threshold: 20000
+      initialization-fail-timeout: 1
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+        show_sql: true
+        format_sql: true
+
 server:
   port: 8082
-
-# Configurations
-
-# DB Configs
 
 # Email and SMS configs
 
