--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -2,10 +2,10 @@ spring:
   application:
     name: auth-app
   datasource:
-    url: jdbc:mysql://localhost:3306/auth-app
+    url: jdbc:mysql://localhost:3306/auth-app?useSSL=false&allowPublicKeyRetrieval=true
     username: root
-    password: root
-
+    password: admin
+    driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       pool-name: auth-app-pool
       maximum-pool-size: 20
